# QUANTT-PairsTrading

./: .gitignore  README.md  README.me  requirements.txt  resources.md  streamlit.py
Initial/frontend/: INSTRUCTIONS.md
Initial/frontend/pages/: __init__.py  cointegration_tests.py  data_exploration.py  pair_identification.py  performance_metrics.py
Initial/frontend/utils/: __init__.py  data_loader.py  (+1 more)
TransientCorrelation/: FILE_GUIDE.md  PROJECT_GUIDE.md  pyproject.toml
TransientCorrelation/scripts/: generate_figures.py  generate_report_figures.py
data/: MinuteData.csv  data-main.py  data_main.py  update_minute_data.py
dbscan/: clusters.csv  pairs_candidates.csv  pairs_pipeline.py  walkthrough.md
electron-dashboard/: .gitignore  README.md  package-lock.json  package.json  start-dev.js
electron-dashboard/public/: index.html  main.js  preload.js
electron-dashboard/src/: App.css  index.css
frontend/: main.py
frontend/.streamlit/: config.toml
frontend/pages/: backtest_results.py  home.py
pairs-trading/: ARCHITECTURE.md
parametertesting/: params.py
part2/: main.py
part2/cointegration/: adf.py  engle_granger.py
part2/data/: data.txt
part2/identifying/: k_means.py
part2/p2_resources/: identification_resources.txt
project_plan/: to_do.md  to_do_p1_week1.md  to_do_part1.md
resources/resourcespart2/: resources.txt
streamlit/: app.py  streamlit.py
trading/trading_part1/: hedge_ratio.py
trading_part1/: backtest.py  data.py  hedge_ratio.py  signals.py  visualization.py
trading_part1/data/: KO_PEP.csv
trading_test/: backtest2.py
(+18 files in other folders)
